List user's own reports and images added
